deployment/deployment-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: kaixin-gateway
  labels:
    app: kaixin-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaixin-gateway
  template:
    metadata:
      labels:
        app: kaixin-gateway
    spec:
      serviceAccountName: kaixin-gateway-sa
      containers:
        - name: kaixin-gateway
          imagePullPolicy: Always
          image: k3d-kaixin-registry:12345/gateway:v1.0
          ports:
            - containerPort: 8085
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: kaixin-gateway-service
spec:
  type: NodePort
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      nodePort: 32005
  selector:
    app: kaixin-gateway
  sessionAffinity: None
