deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaixin-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: kaixin.local
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: custom-webserver-service-v2
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: custom-webserver-service
                port:
                  number: 8080

  tls:
    - hosts:
        - kaixin.local
      secretName: tls-cert
